# creator-link-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RESEARCH.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: convention.json  live_links.csv  roster.csv
src/creator_link_kit/: __init__.py  batch.py  cli.py  config.py  csvsafe.py  links.py  report.py
tests/: test_batch.py  test_cli.py  test_config.py  test_csvsafe.py  test_links.py  test_report.py
