[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "creator-link-kit"
version = "0.1.0"
description = "Convention-as-code tooling for creator campaign links"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Neil Fox"}]
keywords = ["utm", "ga4", "creator", "influencer-marketing", "analytics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6"]
dev = ["pytest>=8", "ruff>=0.5", "build>=1.2"]

[project.scripts]
clk = "creator_link_kit.cli:main"

[project.urls]
Homepage = "https://github.com/NeilFoxAgency/creator-link-kit"
Repository = "https://github.com/NeilFoxAgency/creator-link-kit"
Issues = "https://github.com/NeilFoxAgency/creator-link-kit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
